cmake_minimum_required(VERSION 3.3)

project(xtd_c.forms.examples)
find_package(xtd_c REQUIRED)

add_projects(
  hello_worlds
  #applications
  #controls
  #containers
  #menus_and_toolbars
  #forms
  #dialogs
  #datas
  #components
  #printing
  #themes
  #events
  #drawing
  #user_controls
  #user_dialogs
  #games
  #others
  #tests
  #demos
  #tutorial
)
